# R.I.S.K.-Epidemic-Simulator

./: CMakeLists.txt  README.md  cmake_script.sh  main.cpp  rules.md
core/: core.cpp  main
core/include/: country.hpp  region.hpp  simulation.hpp
core/src/: bind_py.cpp  country  country.cpp  region.cpp  simulation.cpp
data/: RO_borders.csv  RO_counties.csv  countries.csv
gui/: gui.py
gui/assets/: Romania_coords.json
memory/: main
